--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -15,6 +15,6 @@
 <div class="row">
   <div class="col">
     <hr>
-    tabla de resultados
+    <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
