--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,20 @@
-<p>by-region-page works!</p>
+<h2>Por Región</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <!-- SearchBox -->
+    <!-- recordar que si usamos [] para definir la property, debemos pasarle una expresion -->
+    <!-- por defecto las properties (sin []) toman una string -->
+    <shared-search-box
+      (onValue)="searchByRegion($event)"
+      placeholder="Buscar por región"></shared-search-box>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <hr>
+    <countries-country-table [countries]="countries"></countries-country-table>
+  </div>
+</div>
