added debouncer for search box

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,8 +6,9 @@
     <!-- SearchBox -->
     <!-- recordar que si usamos [] para definir la property, debemos pasarle una expresion -->
     <!-- por defecto las properties (sin []) toman una string -->
+    <!-- (onValue)="searchByCapital($event)" -->
     <shared-search-box
-      (onValue)="searchByCapital($event)"
+      (onDebounce)="searchByCapital($event)"
       placeholder="Buscar por capital"></shared-search-box>
   </div>
 </div>
@@ -15,7 +16,7 @@
 <div class="row">
   <div class="col">
     <hr>
-    <shared-loading-spinner></shared-loading-spinner>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
