--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,6 +1,7 @@
+<!-- (keyup.enter)="emitSearch(txtInput.value)" -->
 <input
   type="text"
-  [placeholder]="placeholder"
-  (keyup.enter)="emitSearch(txtInput.value)"
   class="form-control"
+  [placeholder]="placeholder"
+  (keyup)="onKeyPress(txtInput.value)"
   #txtInput>
