--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,13 +2,17 @@
 <hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- SearchBox -->
     <!-- recordar que si usamos [] para definir la property, debemos pasarle una expresion -->
     <!-- por defecto las properties (sin []) toman una string -->
-    <shared-search-box
-      (onValue)="searchByRegion($event)"
-      placeholder="Buscar por región"></shared-search-box>
+    <button
+      *ngFor="let region of regions"
+      class="btn mx-2"
+      [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+      (click)="searchByRegion(region)">
+        {{ region }}
+    </button>
   </div>
 </div>
 
