--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -8,6 +8,7 @@
     <!-- por defecto las properties (sin []) toman una string -->
     <shared-search-box
       (onDebounce)="searchByCountry($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar por país"></shared-search-box>
   </div>
 </div>
@@ -15,6 +16,7 @@
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
