--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -4,4 +4,5 @@
   class="form-control"
   [placeholder]="placeholder"
   (keyup)="onKeyPress(txtInput.value)"
+  [value]="initialValue"
   #txtInput>
